--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -22,5 +22,10 @@ spec:
         name: nginx
         ports:
           - containerPort: 80
+        resources:
+          requests:
+            cpu: 250m
+          limits:
+            cpu: 500m
       nodeSelector:
         app: nginx
