--- a/tomcat-deploy.yaml
+++ b/tomcat-deploy.yaml
@@ -22,5 +22,10 @@ spec:
         name: tomcat
         ports:
           - containerPort: 8080
+        resources:
+          requests:
+            cpu: 250m
+          limits:
+            cpu: 500m
         nodeSelector:
           app: tomcat
