--- a/tomcat-hpa.yaml
+++ b/tomcat-hpa.yaml
@@ -3,7 +3,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: tomcat-hpa
-  namespace: web
+  namespace: was
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
