--- a/tomcat-service.yaml
+++ b/tomcat-service.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  namespace: web
+  namespace: was
   labels:
     app: nginx
 spec:
