--- a/tomcat-ingress.yaml
+++ b/tomcat-ingress.yaml
@@ -4,7 +4,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: tomcat-ingress
-  namespace: web
+  namespace: was
   annotations:
     kubetnetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
