--- a/tomcat-service.yaml
+++ b/tomcat-service.yaml
@@ -3,13 +3,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: tomcat-service
   namespace: was
   labels:
-    app: nginx
+    app: tomcat
 spec:
   selector:
-    app: nginx
+    app: tomcat
   ports:
     - protocol: TCP
       port: 80
